--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,18 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>Mohd Shafaqat Numan is an accomplished IT Analyst with over six years of experience in software development and time series forecasting. 
+  He has honed his expertise in machine learning, natural language processing (NLP), and data analysis, with a strong focus on developing 
+  advanced forecasting models that drive significant business impact. At Tata Consultancy Services LTD, Shafaqat has been instrumental 
+  in devising and refining models for predicting call volumes, sales trends, and other key business metrics, leading to increased 
+  revenue and optimized operations for clients across various industries.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p>In addition to his technical prowess, Shafaqat has a proven track record of collaborating with cross-functional teams to deliver 
+  data-driven insights that inform strategic decision-making. His ability to perform extensive data preprocessing, cleaning, and 
+  feature engineering has been crucial in ensuring the accuracy and reliability of his models. Shafaqat's experience with tools like 
+  Python, SQL, and data visualization platforms such as Qlik Sense and Tableau has enabled him to create intuitive dashboards and 
+  automated processes that enhance the efficiency of business operations.</p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+<p>Driven by a passion for continuous learning, Shafaqat is expanding his expertise into web development and data engineering, 
+  complementing his already robust skill set. His academic background further solidifies his expertise, holding a Master of Science 
+  in Data Science from Liverpool John Moores University, where he graduated with distinction, and a PG Diploma in Data Science from 
+  IIIT Bangalore, with a stellar GPA of 3.94. Shafaqat's combination of technical skills, analytical mindset, and dedication to 
+  growth makes him a valuable asset in any data-driven organization.</p>
