--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,15 +1,21 @@
 <!-- Write your code below -->
-<h1>The Best TV Shows According to Numan</h1>
+<h1> The Best Movies or TV Shows According to Shafaqat Numan</h1>
 
-<h2>My top 3 TV shows of all time</h2>
-
+<h2>My Top 3 Movies of all-time</h2>
 <hr />
-
+<h3>Kabhi Haan Kabhi Naa</h3>
+<p>"Kabhi Haan Kabhi Naa" is a romantic comedy about a love-struck young man, Sunil, who struggles with unrequited love and life choices, learning valuable lessons about acceptance and self-discovery.</p>
+<h3>Cars</h3>
+<p>"Cars" is an animated adventure about Lightning McQueen, a hotshot race car who discovers the true meaning of friendship and life beyond the finish line when he finds himself stranded in a small town.</p>
+<h3>Top Gun</h3>
+<p>"Top Gun" is an action-packed film about a talented but reckless Navy pilot, Maverick, who competes to be the best at an elite fighter school while facing personal and professional challenges.</p>
+<br />
+<br />
+<h2>My Top 3 TV Shows of all-time</h2>
+<hr />
 <h3>The Blacklist</h3>
-<p>One of the best crime drama. Created around the life of the most wanted criminal Raymond Reddington known as the concierge of crime.</p>
-
-<h3>The White Collar</h3>
-<p>TV show based on the life of Neal Caffrey, the greatest con man.</p>
-
-<h3>Special Ops</h3>
-<p>TV show revolving around an Indian spy Himmat Singh and his team.</p>
+<p>"The Blacklist" follows Raymond "Red" Reddington, a notorious criminal who mysteriously surrenders to the FBI, offering to help capture high-profile criminals on his "blacklist" in exchange for working exclusively with rookie profiler Elizabeth Keen.</p>
+<h3>Monk</h3>
+<p>"Monk" is a detective series about Adrian Monk, a brilliant former police detective with obsessive-compulsive disorder, who uses his unique abilities to solve crimes while struggling with his personal challenges.</p>
+<h3>White Collar</h3>
+<p>"White Collar" follows the unlikely partnership between a charming con artist, Neal Caffrey, and an FBI agent, Peter Burke, as they team up to catch white-collar criminals while navigating a world of deception and trust.</p>
