--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +91-9618667332</p>
+<p>Email: shafaqat53415@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Dilshad Nagar Colony, Mehdipatnam<br />
+  Hyderabad<br />
+  Telangana, India <br />
 </p>
